--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = amphitheatre_desktop
+PRODUCT_NAME = Amphitheatre Desktop;
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.amphitheatreDesktop
+PRODUCT_BUNDLE_IDENTIFIER = io.amphitheatre.desktop;
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2022 com.example. All rights reserved.
