--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
   sdk: ">=2.16.1 <3.0.0"
 
 dependencies:
+  colorize_text_avatar: ^1.0.2
   flutter:
     sdk: flutter
   flutter_localizations:
