--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
   sdk: ">=2.16.1 <3.0.0"
 
 dependencies:
+  auto_route: ^3.2.4
   colorize_text_avatar: ^1.0.2
   flutter:
     sdk: flutter
@@ -22,6 +23,8 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^1.0.0
+  auto_route_generator: ^3.2.3
+  build_runner: ^2.1.10
 
 flutter:
   uses-material-design: true
