--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ environment:
 dependencies:
   auto_route: ^3.2.4
   colorize_text_avatar: ^1.0.2
+  empty_widget: ^0.0.5
   flutter:
     sdk: flutter
   flutter_localizations:
