--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: amphitheatre
-description: A new Flutter project.
+description: Open source Flutter-based application that enables you to interact with Amphitheatre.
 
 # Prevent accidental publishing to pub.dev.
 publish_to: 'none'
@@ -10,13 +10,13 @@ environment:
   sdk: ">=2.16.1 <3.0.0"
 
 dependencies:
-  auto_route: ^3.2.4
   colorize_text_avatar: ^1.0.2
   empty_widget: ^0.0.5
   flutter:
     sdk: flutter
-  flutter_localizations:
+  flutter_localizations: 
     sdk: flutter
+    version: ^0.0.0
   google_fonts: ^3.0.1
   intl: ^0.17.0
   provider: ^6.0.3
@@ -28,15 +28,14 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^1.0.0
-  auto_route_generator: ^3.2.3
   build_runner: ^2.1.10
 
 flutter:
   uses-material-design: true
-
+  
   # Enable generation of localized Strings from arb files.
   generate: true
-
+  
   assets:
     # Add assets from the images directory to the application.
     - assets/images/
