--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,10 +15,11 @@ jobs:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
         with:
+          channel: 'stable'
           cache: true
 
       # Get flutter dependencies.
-      - run: flutter pub get -v
+      - run: flutter pub get
 
       # Check for any formatting issues in the code
       - run: flutter format --set-exit-if-changed .
