--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -52,10 +52,11 @@ jobs:
       fail-fast: false
     steps:
       # Set up Flutter.
-      - name: Clone Flutter repository with master channel
+      - name: Clone Flutter repository with stable channel
         uses: subosito/flutter-action@v2
         with:
-          channel: master
+          flutter-version: '2.10.3'
+          channel: stable
 
       - name: Install Linux dependencies.
         if: matrix.target == 'Linux'
