--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,10 +26,11 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
       # Set up Flutter.
-      - name: Clone Flutter repository with master channel
+      - name: Clone Flutter repository with stable channel
         uses: subosito/flutter-action@v2
         with:
-          channel: master
+          flutter-version: '2.10.3'
+          channel: stable
       - run: flutter doctor -v
 
       # Checkout code and get packages.
